[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
]

[project.scripts]
agent = "agent.app:main"
agent-indexer = "agent.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
